durable PoC: restore the shipped children query, and stop naming concepts that dissolve
Four corrections from EJ's review, all of them cases where I settled something
that was not mine to settle.

1. CHILDREN_OF_PARENT anchors on the parent ADDRESS again, [catalogId, parentId],
   which is exactly what the shipped listEntities filters on. My claim that
   parent_id alone suffices was an INFERENCE from the primary key (realm_id, id),
   not an observation that the two queries return the same rows. Acting on it
   changed a query inside a refactor whose job is to preserve behaviour, and it
   settled a contract question (may a scope expose a denormalised scoping column?)
   inside one implementation. Verified against a fresh apache/polaris main at
   2ee7342: same primary key, same uniqueness constraint, same three filter columns.
   Restoring the columns also removes the cost the change invented: the uniqueness
   index still applies, so no new index and NO SCHEMA CHANGE is needed at all.

2. TreeMapDurableManagerTest -> TransactionalManagerWithTreeMapPrimitivesTest.
   A durable manager is business-aware and a TreeMap is a storage detail, so
   "TreeMap durable manager" is not a thing. Now mirrors the JDBC sibling's
   "X manager with Y primitives" phrasing, which keeps the two layers apart.

3. TreeMapAtomicOperationDurableManagerTest ->
   AtomicOperationManagerWithTreeMapPrimitivesTest. Same fusion error, plus it
   propagated "atomic operation" as a manager-level concept. In the target model
   atomicity belongs to orchestration and to durable primitives, so a manager
   variant distinguished by atomicity has nothing left to distinguish.

   Both test files now state, in their own javadoc, that their subject is a shipped
   class slated to dissolve, and into what.

4. TreeMapDurableRecordStore owns its TreeMapSlices instead of accepting one, so
   no caller of the new shape names TreeMapSlices. That type is public today only
   because the shipped LocalPolarisMe